--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
     "typescript": "^5.5.2",
     "vitest": "2.0.5",
     "wrangler": "^3.60.3"
+  },
+  "dependencies": {
+    "gtfs-realtime-bindings": "^1.1.1",
+    "node-fetch": "^3.3.2"
   }
 }
